Se trabajo feature crud sala tipo

--- a/Datos/app.config
+++ b/Datos/app.config
@@ -6,5 +6,8 @@
         <add name="Datos.Properties.Settings.BD_CursoCSharpNetConnectionString"
             connectionString="Data Source=.;Initial Catalog=BD_CursoCSharpNet;User ID=sa;Password=123"
             providerName="System.Data.SqlClient" />
+        <add name="Datos.Properties.Settings.BD_CursoCSharpNetConnectionString1"
+            connectionString="Data Source=database-server-cine.c8hbnhjrqbcv.us-east-2.rds.amazonaws.com;Initial Catalog=BD_CursoCSharpNet;Persist Security Info=True;User ID=admin;Password=s1I8lTCuyPxnXdkCGOV5"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
