--- a/Datos/Properties/Settings.settings
+++ b/Datos/Properties/Settings.settings
@@ -4,11 +4,19 @@
   <Settings>
     <Setting Name="BD_CursoCSharpNetConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
   &lt;ConnectionString&gt;Data Source=.;Initial Catalog=BD_CursoCSharpNet;User ID=sa;Password=123&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=.;Initial Catalog=BD_CursoCSharpNet;User ID=sa;Password=123</Value>
+    </Setting>
+    <Setting Name="BD_CursoCSharpNetConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=database-server-cine.c8hbnhjrqbcv.us-east-2.rds.amazonaws.com;Initial Catalog=BD_CursoCSharpNet;Persist Security Info=True;User ID=admin;Password=s1I8lTCuyPxnXdkCGOV5&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=database-server-cine.c8hbnhjrqbcv.us-east-2.rds.amazonaws.com;Initial Catalog=BD_CursoCSharpNet;Persist Security Info=True;User ID=admin;Password=s1I8lTCuyPxnXdkCGOV5</Value>
     </Setting>
   </Settings>
 </SettingsFile>
