--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -53,25 +53,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ciudades.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Ciudades.Designer.cs">
-      <DependentUpon>Ciudades.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Tipo_Asiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Tipo_Asiento.Designer.cs">
+      <DependentUpon>Form_Tipo_Asiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Ciudades.resx">
-      <DependentUpon>Ciudades.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Tipo_Asiento.resx">
+      <DependentUpon>Form_Tipo_Asiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
