--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsNCiudad.cs" />
+    <Compile Include="clsAsientoTipo.cs" />
     <Compile Include="clsNUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
