--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Tipo_Asiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Tipo_Asiento.Designer.cs">
+      <DependentUpon>Form_Tipo_Asiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Ciudades.resx">
@@ -72,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Tipo_Asiento.resx">
+      <DependentUpon>Form_Tipo_Asiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
