--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsNAsientoTipo.cs" />
     <Compile Include="clsNCiudad.cs" />
     <Compile Include="clsNUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
