--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -53,10 +53,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmCiudades.cs">
+    <Compile Include="Catalogos\frmCiudades.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCiudades.Designer.cs">
+    <Compile Include="Catalogos\frmCiudades.Designer.cs">
       <DependentUpon>frmCiudades.cs</DependentUpon>
     </Compile>
     <Compile Include="frmPrincipal.cs">
@@ -65,30 +65,30 @@
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmUsuarios.cs">
+    <Compile Include="Catalogos\frmUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmUsuarios.Designer.cs">
+    <Compile Include="Catalogos\frmUsuarios.Designer.cs">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmTiposDeAsientos.cs">
+    <Compile Include="Catalogos\frmTiposDeAsientos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTiposDeAsientos.Designer.cs">
+    <Compile Include="Catalogos\frmTiposDeAsientos.Designer.cs">
       <DependentUpon>frmTiposDeAsientos.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmCiudades.resx">
+    <EmbeddedResource Include="Catalogos\frmCiudades.resx">
       <DependentUpon>frmCiudades.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmUsuarios.resx">
+    <EmbeddedResource Include="Catalogos\frmUsuarios.resx">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmTiposDeAsientos.resx">
+    <EmbeddedResource Include="Catalogos\frmTiposDeAsientos.resx">
       <DependentUpon>frmTiposDeAsientos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
